--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,10 @@ configurations {
 
   // INTERLOK-3740 switch from jcraft to com.github.mwiede jsch fork.
   all*.exclude group: 'com.jcraft', module: 'jsch'
+  
+  // Multiple CVE vulnerabilities before 4.x
+  // A few org.apache.activemq dependencies rely on jgroup
+  all*.exclude group: 'org.jgroups', module: 'jgroups'
 }
 
 configurations.all {
@@ -111,16 +115,17 @@ configurations.all {
 }
 
 dependencies {
-  api  ("com.adaptris:interlok-core:$interlokCoreVersion") { changing= true}
-  api  ("com.adaptris:interlok-common:$interlokCoreVersion") { changing= true}
-  api  ("org.apache.activemq:artemis-jms-server:$artemisVersion")
-  api  ("org.apache.activemq:artemis-server:$artemisVersion") {
+  api ("com.adaptris:interlok-core:$interlokCoreVersion") { changing= true}
+  api ("com.adaptris:interlok-common:$interlokCoreVersion") { changing= true}
+  api ("org.apache.activemq:artemis-jms-server:$artemisVersion")
+  api ("org.apache.activemq:artemis-server:$artemisVersion") {
     // 4.1.43.Final has a HTTP request smuggler vuln, so
     // we exclude netty, and force the fixed version
     // dependabot will sort us out...
     exclude group: "io.netty"
     exclude group: "org.apache.commons", module: "commons-configuration2"
   }
+  implementation ("org.jgroups:jgroups:4.2.4.Final")
   implementation ("io.netty:netty-buffer:$nettyVersion")
   implementation ("io.netty:netty-common:$nettyVersion")
   implementation ("io.netty:netty-handler:$nettyVersion")
